# modermakes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  constraint.cpp  designProblemsToSolve.md  main  main.cpp  plane.cpp  plane.h  point.cpp
docs/: FAQs.md  notes.md
include/: constraint.h  lad_concepts.h  line.h  path.h  point.h
source/: compositeInteger.cpp  compositeInteger.h  constraint.cpp  constraint.h  int512_t.cpp  int512_t.h  line.cpp  main.cpp  point.cpp  point.h  startingPoint.cpp
tests/: CMakeLists.txt  testPoints.cpp
